@@ -1,4 +1,9 @@
 -*- text -*-
+* For MIPS, Add -m[no-]fix-loongson3-llsc option to fix (or not) Loongson3 LLSC
+  Errata.  Add a --enable-mips-fix-loongson3-llsc=[yes|no] configure time option
+  to set the default behavior. Set the default if the configure option is not used
+  to "no".
+
 
 * Add support for the MIPS Loongson EXTensions R2 (EXT2) instructions.
 
